harness/test/errors/065_even_predicate_hint.eu
# Mistake: using even? (Python/Haskell style) — does not exist in eucalypt
xs: [1, 2, 3, 4, 5]
evens: xs filter(even?)
